log/build_2025-10-09_15-50-11/tortoisebot_gazebo/stderr.log
  File "/home/arz-1017/task/task_ws/install/tortoisebot_gazebo/lib/python3.12/site-packages/tortoisebot_gazebo/laserdata.py", line 2
    import rclpy.node from Node
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Did you mean to use 'from ... import ...' instead?

